# Cataclysm

./: .gitignore  CODEBASE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NATIVE_C_INTEGRATION_FIXES.md  README.md  SETUP.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/general/: ANSWER_TO_YOUR_QUESTION.md  ARCHITECTURE.md  CHANGELOG.md  DECOMPILER_FEATURES.md  FEATURE_COMPLETE.md  FULL_RECONSTRUCTION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  MULTI_FILE_NAVIGATION.md  PE_REASSEMBLER_COMPLETE_GUIDE.md  PE_REASSEMBLER_IMPLEMENTATION.md  PE_REASSEMBLER_TEST_GUIDE.md  QUICK_START.md  README.md  READY_TO_TEST.txt  ROADMAP_V3.2_TO_V4.0.md  RUST_DLL_SUPPORT.md  TEST_INSTRUCTIONS.txt  UPGRADE_SUMMARY.md  WHAT_WE_FIXED_AND_WHAT_TO_TEST.md
docs/v2.0/: README.md  VERSION_2.0_SUMMARY.md
docs/v3.0/: README.md  VERSION_3.0_ROADMAP.md  WHATS_NEW_V3.md
docs/v3.1/: README.md  VERSION_3.1_SUMMARY.md  WHATS_NEW_V3.1.md
docs/v3.2.1/: IMPLEMENTATION_SUMMARY_V3.2.1.md  PROJECT_FOLDER_GUIDE.md  QUICK_START_V3.2.1.md  README.md  README_V3.2.1.md  (+1 more)
examples/: analyze_pe.rs  assemble_code.rs  compile_code.rs  decompile_binary.rs
native/: disassembler.c
src/: anti_obfuscation.rs  assembler.rs  assembly_relocator.rs  builtin_assembler.rs  compiler_tester.rs  cross_platform_compiler.rs  custom_compiler.rs  decompiler.rs  enhanced_disasm.rs  keybinds.rs  lib.rs  loading_animation.rs  main.rs  menu_system.rs  native_disassembler.rs  patch_ui.rs  pe_builder.rs  pe_fixer.rs  pe_reassembler.rs  script_editor.rs  scripting_api.rs  theme_engine.rs  windows_api_db.rs
(+3 files in other folders)
