[package]
name = "rust_file_explorer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
crossterm = "0.27"
ratatui = "0.24"
tui-textarea = "0.4"
goblin = "0.6"
capstone = "0.11"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
chrono = "0.4"
arboard = "3.3"
